[BUG] Categories navigation no longer hidden behind klubs page

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -24,14 +24,14 @@ $base-z-index: 0;
 $base-page-pad: 10px;
 
 // Colors
-$white: #FFF;
-$blue: #477DCA;
+$white: #fff;
+$blue: #477dca;
 $dark-gray: #4d4d4d;
 $medium-gray: #999;
-$light-gray: #DEDEDE;
-$light-red: #FBE3E4;
-$light-yellow: #FFF6BF;
-$light-green: #E6EFC2;
+$light-gray: #dedede;
+$light-red: #fbe3e4;
+$light-yellow: #fff6bf;
+$light-green: #e6efc2;
 
 // Background Color
 $base-background-color: white;
@@ -61,11 +61,11 @@ $form-border-color: $base-border-color;
 $form-border-color-hover: darken($base-border-color, 10);
 $form-border-color-focus: $base-accent-color;
 $form-border-radius: $base-border-radius;
-$form-box-shadow: inset 0 1px 3px rgba(black,0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
+$form-box-shadow: inset 0 1px 3px rgba(black, 0.06);
+$form-box-shadow-focus: $form-box-shadow,
+  0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
 $form-font-size: $base-font-size;
 $form-font-family: $base-font-family;
-
 
 // Specifics: data-bar
 $data-bar-width: 330px !default;
@@ -81,3 +81,6 @@ $sliding-menu-width: 280px !default;
 
 // Specifics: map widgets
 $map-widget-border-color: silver;
+
+// KLUBI SLOVENIJE SPECIFIC
+$klub-page-max-width: 400px;
