--- a/app/styles/components/klub-page.scss
+++ b/app/styles/components/klub-page.scss
@@ -1,5 +1,4 @@
 .klub_page {
-  $klub-page-max-width: 400px;
   $klub-page-border: 1px solid $map-widget-border-color;
   position: relative;
   z-index: 1004;
