--- a/app/styles/pages/klubs.scss
+++ b/app/styles/pages/klubs.scss
@@ -1,14 +1,13 @@
 // TODO: scope this to only the klubs template
 .loader {
   @extend %loader;
-  height: calc(100vh - #{$top-nav-height-mobile} );
+  height: calc(100vh - #{$top-nav-height-mobile});
   color: $blue;
 
   @include media($medium-screen-up) {
     height: 100vh;
   }
 }
-
 
 .loader--klubs {
   margin: 0;
@@ -27,7 +26,6 @@
   right: 0;
 }
 
-
 .klubs-page {
   min-height: 100%;
   width: 100%;
@@ -45,12 +43,12 @@
 
     @include media($medium-screen-up) {
       // right:  $widgets-separation;
-      right:  9.5em;
+      right: 9.5em;
       left: $sliding-menu-width;
     }
 
     @include media($landscape-large-screen-up) {
-      // right: $widgets-separation;
+      right: $klub-page-max-width + $widgets-separation;
     }
   }
 
@@ -58,7 +56,6 @@
     z-index: 1003;
   }
 }
-
 
 .map-and-klubpage {
   @include flex-grow(1);
